# simuradar

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
examples/dyproto-int-parser-evolution/: v1_hardcoded_parsers_and_builders.py  v2_shared_helpers_plus_wrappers.py  v3_strenum_length_dispatch_single_api.py
src/simuradar/: __init__.py  analyzer.py  cli.py  normalizer.py  parser.py  report.py
src/simuradar/engines/: __init__.py  containment.py  jaccard.py  similarity.py
