[project]
name = "simuradar"
version = "0.1.0"
description = "Code duplication detection using AST analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apted>=1.0.3",
    "cyclopts>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
simuradar = "simuradar.cli:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simuradar"]
